--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
     "test": "jest",
-    "lint": "eslint ./src/**/*.ts"
+    "lint": "eslint ./src/**/*.ts",
+    "prettier": "npx prettier --check ."
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jest": "^25.0.0",
+    "@types/three": "^0.129.1",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "babel-cli": "^6.26.0",
@@ -36,9 +38,11 @@
     "canvas": "^2.6.1",
     "clean-webpack-plugin": "^3.0.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^8.3.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.0.1",
     "pre-commit": "^1.2.2",
+    "prettier": "2.3.1",
     "script-ext-html-webpack-plugin": "^2.1.4",
     "ts-jest": "^26.1.0",
     "ts-loader": "^7.0.5",
@@ -46,5 +50,10 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
-  }
+  },
+  "pre-commit": [
+    "prettier",
+    "lint",
+    "test"
+  ]
 }
